Refactoring Done. The project is ready for Initial release. Alhamdulillah ...

--- a/src/app/components/authentication/authentication.component.html
+++ b/src/app/components/authentication/authentication.component.html
@@ -24,7 +24,7 @@
 			<table class="example-full-width" cellspacing="0">
 			  	<tr>
 				    <mat-form-field class="example-full-width">
-				      <input name="username" matInput ngModel placeholder="Username" required>
+				      <input name="username" matInput ngModel placeholder="Username ( not email ) " required>
 				    </mat-form-field>
 			  	</tr>
 			  	<tr>
